--- a/css/style.css
+++ b/css/style.css
@@ -618,3 +618,21 @@ h2 {
 .form-text a:hover {
   text-decoration: underline;
 }
+
+
+#mensaje-confirmacion {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 9999;
+      padding: 20px 30px;
+      background-color: #d4edda;
+      color: #155724;
+      border: 1px solid #c3e6cb;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      font-size: 1.2rem;
+      text-align: center;
+    }
